force-app/main/default/objects/Judgment_Staging__c/Judgment_Staging__c.object-meta.xml
<CustomObject>
    <description>Judgment staging table used for excel/csv processing</description>
    <label>Judgment Staging</label>
    <nameField>
        <displayFormat>JS-{0000}</displayFormat>
        <label>Judgment Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Judgment Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>