force-app/main/default/objects/Judgment_Staging__c/fields/Agency_Initiated_Legal_Action__c.field-meta.xml
<CustomField>
    <fullName>Agency_Initiated_Legal_Action__c</fullName>
    <description>Agency Initiated Legal Action</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Initiated Legal Action</inlineHelpText>
    <label>Agency Initiated Legal Action</label>
    <length>25</length>
    <type>Text</type>
</CustomField>