force-app/main/default/objects/Judgment_Staging__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Balance</label>
    <length>25</length>
    <type>Text</type>
</CustomField>