force-app/main/default/objects/Judgment_Staging__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>County</inlineHelpText>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>