force-app/main/default/objects/Judgment_Staging__c/fields/Date_Writ_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Writ_Issued__c</fullName>
    <description>Date Writ Issued</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Writ Issued</inlineHelpText>
    <label>Date Writ Issued</label>
    <length>25</length>
    <type>Text</type>
</CustomField>