force-app/main/default/objects/Judgment_Staging__c/fields/Date_Writ_Issued_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_Writ_Issued_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Writ Issued Text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>