force-app/main/default/objects/Judgment_Staging__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>