force-app/main/default/objects/Judgment_Staging__c/fields/Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date__c</fullName>
    <description>Filing Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Filing Date</inlineHelpText>
    <label>Filing Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>