force-app/main/default/objects/Judgment_Staging__c/fields/Filing_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filing Date Text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>