force-app/main/default/objects/Judgment_Staging__c/fields/Garnishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Garnishment_Date__c</fullName>
    <description>Garnishment Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Garnishment Date</inlineHelpText>
    <label>Garnishment Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>