force-app/main/default/objects/Judgment_Staging__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Identifier</inlineHelpText>
    <label>Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>