force-app/main/default/objects/Judgment_Staging__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Interest Rate</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Interest Rate</inlineHelpText>
    <label>Interest Rate</label>
    <length>25</length>
    <type>Text</type>
</CustomField>