force-app/main/default/objects/Judgment_Staging__c/fields/Judgment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Amount__c</fullName>
    <description>Judgment Amount</description>
    <inlineHelpText>Judgment Amount</inlineHelpText>
    <label>Judgment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>