force-app/main/default/objects/Judgment_Staging__c/fields/Judgment_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Date__c</fullName>
    <description>Judgment Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Judgment Date</inlineHelpText>
    <label>Judgment Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>