force-app/main/default/objects/Judgment_Staging__c/fields/Judgment_Province__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Province__c</fullName>
    <description>Judgment_Province__c</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Judgment_Province__c</inlineHelpText>
    <label>Judgment Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>