force-app/main/default/objects/Judgment_Staging__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>