force-app/main/default/objects/Judgment_Staging__c/fields/Legal_Agency__c.field-meta.xml
<CustomField>
    <fullName>Legal_Agency__c</fullName>
    <description>Legal Agency</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Legal Agency</inlineHelpText>
    <label>Legal Agency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>