force-app/main/default/objects/Judgment_Staging__c/fields/Legal_Firm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm__c</fullName>
    <description>Legal Firm</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Legal Firm</inlineHelpText>
    <label>Legal Firm</label>
    <length>250</length>
    <type>Text</type>
</CustomField>