force-app/main/default/objects/Judgment_Staging__c/fields/Placement_Agency__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency__c</fullName>
    <description>Placement Agency</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Agency</inlineHelpText>
    <label>Placement Agency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>