force-app/main/default/objects/Judgment_Staging__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <description>Placement Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Status</inlineHelpText>
    <label>Placement Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>