force-app/main/default/objects/Judgment_Staging__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <description>This field indicates the Product&apos;s actual salesforce id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field indicates the Product&apos;s actual salesforce id</inlineHelpText>
    <label>Product Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>