force-app/main/default/objects/Judgment_Staging__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <description>Product Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product Status</inlineHelpText>
    <label>Product Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>