force-app/main/default/objects/Judgment_Staging__c/fields/Suit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Suit_Amount__c</fullName>
    <description>Suit Amount</description>
    <inlineHelpText>Suit Amount</inlineHelpText>
    <label>Suit Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>