force-app/main/default/objects/Judgment_Staging__c/fields/Type_of_Court__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Court__c</fullName>
    <description>Type of Court</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type of Court</inlineHelpText>
    <label>Type of Court</label>
    <length>50</length>
    <type>Text</type>
</CustomField>