force-app/main/default/objects/Judgment_Staging__c/fields/Writ_Amount__c.field-meta.xml
<CustomField>
    <fullName>Writ_Amount__c</fullName>
    <description>Writ Amount</description>
    <inlineHelpText>Writ Amount</inlineHelpText>
    <label>Writ Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>